# rune

./: .gitignore  APPROACHES.md  CMakeLists.txt  LICENSE  README.md  test.html  view_art.html
apps/: rune_cli.cpp
include/rune/: cell.hpp  converter.hpp  json.hpp  ramp.hpp  writer.hpp
output/: 01.json
player/: README.md
player/hugo-integration/: README.md
player/hugo-integration/content/example/: _index.md
player/hugo-integration/layouts/shortcodes/: ascii-video.html
player/hugo-integration/static/css/: ascii-video.css
player/hugo-integration/static/js/: asciiPlayerJsonl.js  logger.js
player/hugo-integration/static/videos/example/lh/: manifest.json
player/react-player/: README.md
src/: converter.cpp  json.cpp  writer.cpp
